# InterviewQuestions

./: AnagramDerivation.php  README.md
php/: MergeSort.php  Power.php  StringReversal.php  TreeTraversal.php
python/: .pylintrc  README.md  find_anagrams.py  find_duplicate_numbers.py  print_github_workflows.py  pyproject.toml  run_remotely.py
